operator/pkg/model/ingestion/testdata/gateway/http_external_auth_grpc/input-service.yaml
- metadata:
    creationTimestamp: null
    name: my-service
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
- metadata:
    creationTimestamp: null
    name: auth-service
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
